[tool.poetry]
name = "aws-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pulumi = ">=3.0.0,<4.0.0"
pulumi-aws = ">=6.0.2,<7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
